--- a/WarmingUpWithUIKit/WarmingUpWithUIKit/Base.lproj/Main.storyboard
+++ b/WarmingUpWithUIKit/WarmingUpWithUIKit/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="S5T-M5-DhY">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="32700.99.1234" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="CUK-uX-jlz">
     <device id="retina6_72" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22685"/>
@@ -196,12 +196,12 @@
             </objects>
             <point key="canvasLocation" x="2507" y="3"/>
         </scene>
-        <!--View Controller-->
+        <!--Connect View Controller-->
         <scene sceneID="CCL-70-6JM">
             <objects>
-                <viewController id="qVf-7E-9gt" sceneMemberID="viewController">
+                <viewController id="qVf-7E-9gt" customClass="ConnectViewController" customModule="WarmingUpWithUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="PlW-QT-I5i">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ruf-kF-7HJ">
@@ -211,7 +211,7 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
-                                    <segue destination="lOW-xn-aQ9" kind="show" id="3wl-gH-Lj1"/>
+                                    <segue destination="lOW-xn-aQ9" kind="show" identifier="goSegue" id="3wl-gH-Lj1"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oNz-2u-gqh">
@@ -223,11 +223,20 @@
                                     <segue destination="z77-nj-JMT" kind="presentation" id="DaL-1m-fEH"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yAp-Lb-q5a">
+                                <rect key="frame" x="167" y="346" width="97" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="vua-d8-LFe"/>
                         <color key="backgroundColor" systemColor="systemGreenColor"/>
                     </view>
                     <navigationItem key="navigationItem" id="Eft-s0-nXG"/>
+                    <connections>
+                        <outlet property="insertText" destination="yAp-Lb-q5a" id="TLz-li-kBj"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Cuw-j8-4KT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -277,39 +286,55 @@
             </objects>
             <point key="canvasLocation" x="4976" y="-708"/>
         </scene>
-        <!--View Controller-->
+        <!--Next View Controller-->
         <scene sceneID="tNr-bA-vXC">
             <objects>
-                <viewController id="lOW-xn-aQ9" sceneMemberID="viewController">
+                <viewController id="lOW-xn-aQ9" customClass="NextViewController" customModule="WarmingUpWithUIKit" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Qll-gM-F7U">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thq-og-8gd">
-                                <rect key="frame" x="178" y="449" width="75" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Thq-og-8gd">
+                                <rect key="frame" x="177.66666666666666" y="424" width="75" height="153"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                                 <connections>
                                     <segue destination="4U3-Nq-rgz" kind="show" id="Zrg-Yx-spT"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iOw-WP-R6c">
+                                <rect key="frame" x="0.0" y="253" width="430" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="jlV-Vl-Nis"/>
                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
+                        <constraints>
+                            <constraint firstItem="Thq-og-8gd" firstAttribute="centerY" secondItem="jlV-Vl-Nis" secondAttribute="centerY" id="1BC-rJ-XPQ"/>
+                            <constraint firstItem="Thq-og-8gd" firstAttribute="top" secondItem="iOw-WP-R6c" secondAttribute="bottom" constant="150" id="Pyi-cz-FLZ"/>
+                            <constraint firstItem="jlV-Vl-Nis" firstAttribute="trailing" secondItem="iOw-WP-R6c" secondAttribute="trailing" id="hiw-nR-4UU"/>
+                            <constraint firstItem="iOw-WP-R6c" firstAttribute="top" secondItem="jlV-Vl-Nis" secondAttribute="top" constant="150" id="m9t-cH-QEh"/>
+                            <constraint firstItem="Thq-og-8gd" firstAttribute="centerX" secondItem="jlV-Vl-Nis" secondAttribute="centerX" id="oqB-lS-64m"/>
+                            <constraint firstItem="iOw-WP-R6c" firstAttribute="leading" secondItem="jlV-Vl-Nis" secondAttribute="leading" id="wII-62-VPK"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="XlQ-gn-Z0a"/>
+                    <connections>
+                        <outlet property="NextViewLabel" destination="iOw-WP-R6c" id="1fG-zF-qAE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Tf5-tg-KHY" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4976" y="3"/>
+            <point key="canvasLocation" x="4975.8139534883721" y="2.5751072961373391"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="JB3-Va-Brq">
             <objects>
                 <viewController id="4U3-Nq-rgz" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Sl4-3w-NTf">
-                        <rect key="frame" x="0.0" y="0.0" width="430" height="922"/>
+                        <rect key="frame" x="0.0" y="0.0" width="430" height="932"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zk8-Q7-81o">
@@ -437,7 +462,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Zrg-Yx-spT"/>
-        <segue reference="XoW-fa-Lqc"/>
+        <segue reference="RT3-yo-iz0"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="apple.terminal.on.rectangle" catalog="system" width="128" height="98"/>
